# rust-actix-web

./: .gitignore  README.md
template/rust-actix-web/: .dockerignore  Cargo.toml  Dockerfile  template.yml
template/rust-actix-web/function/: Cargo.toml
template/rust-actix-web/function/src/: lib.rs
template/rust-actix-web/main/: Cargo.toml
template/rust-actix-web/main/src/: main.rs
test/: test_build_and_run.sh
