[package]
name = "main"
version = "0.1.0"
authors = ["baremaximum <therealcharlesdesbiens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
function = {path = "../function"}
actix-web = "3"
env_logger = "0.8.3"
log = "0.4.14"
